Edited wiki page through web user interface.

--- a/wiki/NlIdea.wiki
+++ b/wiki/NlIdea.wiki
@@ -8,9 +8,9 @@ Op deze pagina hebben we nieuwe ideeën te bespreken voor phpDays. Plaats uw ide
 
 Ik ben het leren van de Python * * taal en haar * Django * kader. Ik ben ook leren over de * Google! AppEngine *.
 
-I like its models very much. We do not create a database and do not describe a database in files. We create model classes with field descriptions. At launch, our application generates a database structure and then uses it. Very simple to use!
+Ik vind modellen zeer leuk. Wij creëren geen een database en geen beschrijving van een database in bestanden. Wij creëren model klassen met veld-beschrijvingen. Bij de lancering, onze applicatie genereert een database structuur en dat wordt vervolgens weer gebruikt. Dus het is zeer eenvoudig te gebruiken!
 
-For example, to create a model class _(see [http://code.google.com/p/phpdays/source/browse/#svn/trunk/apps/phpdays.org/app/Model more examples])_:
+Bijvoorbeeld, het creëren van een model klasse _(see [http://code.google.com/p/phpdays/source/browse/#svn/trunk/apps/phpdays.org/app/Model more examples])_:
 {{{
 class Model_Blog extends Days_Model {
     protected $_name    = 'type: String, min: 2, max: 100, required';
