--- a/wiki/NlIdea.wiki
+++ b/wiki/NlIdea.wiki
@@ -92,18 +92,17 @@ Zie de code [http://code.google.com/p/phpdays/source/browse/branches/models_like
 Alsjeblieft, help ons met het inplannen van deze maand. Deze is het belangrijkste voor onze eerste release *phpDays 1.1*.
 
 If user use call `witch(model1, model2, ...)` - than into model processed:
- * all models cached in one array where described all models. This file saved once, and regenerated on each change in model classes
- * find all pathes from current model to all specified models. If not find - throw exception
- * join all model tables and set "where" conditions from passed models
- * for represent ROW need use Days_Db_Row class _(need to create it)_
- * execute statement and fill all rows for current model only. This execute only by first call `__get()` _(and equialent)_ method for recive data from model
+ *  Alle modellen worden opgeslagen in een array en waar alle modellen worden beschreven. Zodra dit bestand eenmaal is opgeslagen, worden er klasse gegenereerd. 
+ * Vindt alle Pathes van het huidige model naar alle gespecificeerde modellen.
+ * Join alle modeltabellen en zet "waar" voorwaarden van modellen voorbij.
+ * Voor vertegenwoordigen ROW nodig gebruik Days_Db_Row klasse _ (nodig om het te maken) _
+ * Uitvoeren verklaring en vul alle rijen voor huidige model alleen. Deze voeren alleen door eerste gesprek "__get ()` _ (en equialent) _ methode voor Recive gegevens van model
 
 ----
 
 == Validator ==
 
-[EnLibDaysValidate Days_Validate] - check a variable by criteria and return `true` only if its value is valid.
-
+[EnLibDaysValidate Days_Validate] - controleer of een variabele door criteria en terugkeer heeft gemaakt en een `echte waarde heeft.
 {{{
 $age = 21;
 $mail = 'Tom@Jerry.com';
@@ -125,7 +124,7 @@ Tasks:
 
 == Event (issue #15) ==
 
-[EnLibDaysEvent Days_Event] - an implementation of the Observer pattern. Helps join many components to one system without changes in any component.
+[EnLibDaysEvent Days_Event] - een implementatie van de Observer patroon. Helpt join veel componenten op een systeem zonder wijzigingen in een component.
 
 Days library events:
 {{{
@@ -146,7 +145,7 @@ class Days_User {
 ...
 }}}
 
-Your application events are in the [EnLibDaysModel models] _(add the name of your application before an event name)_:
+Jou appplicatie events zijn in de [EnLibDaysModel models] _ (voeg de naam van uw aanvraag voor een evenement naam) _:
 {{{
 class Myapp_Model_Rss {
   public function import($path) {
@@ -165,7 +164,7 @@ class Myapp_Model_Rss {
 }
 }}}
 
-Now, we have to add a forum with a user authorization to the site. We use events in the forum.
+Nu hebben we een forum toe te voegen met een gebruiker toestemming aan de site. We gebruiken gebeurtenissen in het forum.
 {{{
 // general Days event
 Days_Event::add('user.login.success', 'userSuccessLogged');
@@ -187,4 +186,4 @@ function rssNotLoaded() {
 
 == Form ==
 
-[EnLibDaysForm Days_Form] - process html forms. If all data is passed correctly - execute a form handler.
+[EnLibDaysForm Days_Form] - proces HTML-formulieren. Als alle gegevens correct worden doorgegeven - dan is de uitvoering van een formulier handler.
