--- a/wiki/NlChangelog.wiki
+++ b/wiki/NlChangelog.wiki
@@ -33,10 +33,10 @@
 
 === 1.1 beta1 ^(18 Oktober 2009)^ ===
 
- * r19-r20 Added [http://templum.googlecode.com Templum] support - new template engine.
- * `apps/new`: Fix css text-align (created by yui library).
- * Changes in apps/new: added jquery library, added yui css reset, changed index layout.
- * Fix bug in application "phpdays.org" in tag script.
+ * r19-r20 Toegevoegd [http://templum.googlecode.com Templum] ondersteuning - nieuw template engine.
+ * `apps/new`: Maak css text-align (gemaakt bij yui library).
+ * Verander in apps/new: voeg toe jquery library, voeg toe yui css reset, verander index layout.
+ * Repareer de fouten in application "phpdays.org" in tag script.
  * Voeg toe Smarty plugin block for show block template by name.
  * Voeg toe applicatie "phpdays.org" with static main page.
 
